--- a/common/build.gradle
+++ b/common/build.gradle
@@ -52,4 +52,7 @@ dependencies {
     // RxJava
     api 'io.reactivex.rxjava2:rxjava:2.1.0'
     api 'io.reactivex.rxjava2:rxandroid:2.0.1'
+
+    api project(':camera')
+    api project(':gallery_library')
 }
